--- a/interactions/carousel.html
+++ b/interactions/carousel.html
@@ -80,14 +80,14 @@ advanced_tab:
               Next
             </div>
             <div data-ur-carousel-component="scroll_container">
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample1.png' alt="1" />
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample2.png' alt="2" />
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample3.png' alt="3" />
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample4.png' alt="4" />
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample5.png' alt="5" />
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample6.png' alt="6" />
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample7.png' alt="7" />
-              <img data-ur-carousel-component="item" src='{{site.url}}../images/sample8.png' alt="8" />
+              <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample1.png' alt="1" /> </span>
+              <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample2.png' alt="2" /> </span>
+              <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample3.png' alt="3" /> </span>
+              <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample4.png' alt="4" /> </span>
+              <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample5.png' alt="5" /> </span>
+              <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample6.png' alt="6" /> </span>
+              <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample7.png' alt="7" /> </span>
+              <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample8.png' alt="8" /> </span>
             </div>
           </div>
         </div>
@@ -100,14 +100,14 @@ advanced_tab:
   <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
   <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
   <div data-ur-carousel-component='scroll_container'>
-    <img data-ur-carousel-component='item' src='images/sample1.png' alt="1" />
-    <img data-ur-carousel-component='item' src='http://placekitten.com/g/200/200' alt="2" />
-    <img data-ur-carousel-component='item' src='http://placekitten.com/g/200/200' alt="3" />
-    <img data-ur-carousel-component='item' src='http://placekitten.com/g/200/200' alt="4" />
-    <img data-ur-carousel-component='item' src='http://placekitten.com/g/200/200' alt="5" />
-    <img data-ur-carousel-component='item' src='http://placekitten.com/g/200/200' alt="6" />
-    <img data-ur-carousel-component='item' src='http://placekitten.com/g/200/200' alt="7" />
-    <img data-ur-carousel-component='item' src='http://placekitten.com/g/200/200' alt="8" />
+    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="1" /> </span>
+    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="2" /> </span>
+    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="3" /> </span>
+    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="4" /> </span>
+    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="5" /> </span>
+    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="6" /> </span>
+    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="7" /> </span>
+    <span data-ur-carousel-component='item'> <img src='http://placekitten.com/g/200/200' alt="8" /> </span>
   </div>
 </div>
 {% endhighlight %}
@@ -140,19 +140,19 @@ advanced_tab:
       <ul>
         <li><span class="inline_code">data-ur-vertical-scroll="disabled"</span> - apply this to the set</li>
       </ul>
-      <div data-ur-set="carousel" data-ur-vertical-scroll="disabled">
+      <div data-ur-set="carousel" data-ur-vertical-scroll="disabled" data-ur-clones="5">
         <span data-ur-carousel-component="count"> -- count -- </span>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
         <div data-ur-carousel-component="scroll_container">
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample1.png' alt="1" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample2.png' alt="2" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample3.png' alt="3" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample4.png' alt="4" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample5.png' alt="5" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample6.png' alt="6" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample7.png' alt="7" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample8.png' alt="8" />
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample1.png' alt="1" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample2.png' alt="2" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample3.png' alt="3" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample4.png' alt="4" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample5.png' alt="5" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample6.png' alt="6" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample7.png' alt="7" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample8.png' alt="8" /> </span>
         </div>
       </div>
     </div>
@@ -175,14 +175,14 @@ advanced_tab:
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
         <div data-ur-carousel-component="scroll_container">
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample1.png' alt="1" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample2.png' alt="2" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample3.png' alt="3" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample4.png' alt="4" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample5.png' alt="5" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample6.png' alt="6" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample7.png' alt="7" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample8.png' alt="8" />
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample1.png' alt="1" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample2.png' alt="2" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample3.png' alt="3" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample4.png' alt="4" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample5.png' alt="5" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample6.png' alt="6" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample7.png' alt="7" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample8.png' alt="8" /> </span>
         </div>
       </div>
     </div>
@@ -210,14 +210,14 @@ advanced_tab:
           Next
         </div>
         <div data-ur-carousel-component="scroll_container">
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample1.png' alt="1" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample2.png' alt="2" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample3.png' alt="3" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample4.png' alt="4" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample5.png' alt="5" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample6.png' alt="6" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample7.png' alt="7" />
-          <img data-ur-carousel-component="item" src='{{site.url}}../images/sample8.png' alt="8" />
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample1.png' alt="1" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample2.png' alt="2" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample3.png' alt="3" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample4.png' alt="4" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample5.png' alt="5" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample6.png' alt="6" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample7.png' alt="7" /> </span>
+          <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample8.png' alt="8" /> </span>
         </div>
       </div>
     </div>
