--- a/site/interactions/carousel.html
+++ b/site/interactions/carousel.html
@@ -299,14 +299,14 @@
               Next
             </div>
             <div data-ur-carousel-component="scroll_container">
-              <img data-ur-carousel-component="item" src='../images/sample1.png' alt="1" />
-              <img data-ur-carousel-component="item" src='../images/sample2.png' alt="2" />
-              <img data-ur-carousel-component="item" src='../images/sample3.png' alt="3" />
-              <img data-ur-carousel-component="item" src='../images/sample4.png' alt="4" />
-              <img data-ur-carousel-component="item" src='../images/sample5.png' alt="5" />
-              <img data-ur-carousel-component="item" src='../images/sample6.png' alt="6" />
-              <img data-ur-carousel-component="item" src='../images/sample7.png' alt="7" />
-              <img data-ur-carousel-component="item" src='../images/sample8.png' alt="8" />
+              <span data-ur-carousel-component="item"> <img src='../images/sample1.png' alt="1" /> </span>
+              <span data-ur-carousel-component="item"> <img src='../images/sample2.png' alt="2" /> </span>
+              <span data-ur-carousel-component="item"> <img src='../images/sample3.png' alt="3" /> </span>
+              <span data-ur-carousel-component="item"> <img src='../images/sample4.png' alt="4" /> </span>
+              <span data-ur-carousel-component="item"> <img src='../images/sample5.png' alt="5" /> </span>
+              <span data-ur-carousel-component="item"> <img src='../images/sample6.png' alt="6" /> </span>
+              <span data-ur-carousel-component="item"> <img src='../images/sample7.png' alt="7" /> </span>
+              <span data-ur-carousel-component="item"> <img src='../images/sample8.png' alt="8" /> </span>
             </div>
           </div>
         </div>
@@ -318,14 +318,14 @@
   <span class="nt">&lt;div</span> <span class="na">data-ur-carousel-component=</span><span class="s">&quot;button&quot;</span> <span class="na">data-ur-carousel-button-type=</span><span class="s">&quot;prev&quot;</span><span class="nt">&gt;</span>Prev<span class="nt">&lt;/div&gt;</span>
   <span class="nt">&lt;div</span> <span class="na">data-ur-carousel-component=</span><span class="s">&quot;button&quot;</span> <span class="na">data-ur-carousel-button-type=</span><span class="s">&quot;next&quot;</span><span class="nt">&gt;</span>Next<span class="nt">&lt;/div&gt;</span>
   <span class="nt">&lt;div</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;scroll_container&#39;</span><span class="nt">&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;images/sample1.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;1&quot;</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;2&quot;</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;3&quot;</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;4&quot;</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;5&quot;</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;6&quot;</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;7&quot;</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;8&quot;</span> <span class="nt">/&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;1&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;2&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;3&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;4&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;5&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;6&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;7&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;http://placekitten.com/g/200/200&#39;</span> <span class="na">alt=</span><span class="s">&quot;8&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
   <span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;/div&gt;</span>
 </code></pre></div>
@@ -357,19 +357,19 @@
       <ul>
         <li><span class="inline_code">data-ur-vertical-scroll="disabled"</span> - apply this to the set</li>
       </ul>
-      <div data-ur-set="carousel" data-ur-vertical-scroll="disabled">
+      <div data-ur-set="carousel" data-ur-vertical-scroll="disabled" data-ur-clones="5">
         <span data-ur-carousel-component="count"> -- count -- </span>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
         <div data-ur-carousel-component="scroll_container">
-          <img data-ur-carousel-component="item" src='../images/sample1.png' alt="1" />
-          <img data-ur-carousel-component="item" src='../images/sample2.png' alt="2" />
-          <img data-ur-carousel-component="item" src='../images/sample3.png' alt="3" />
-          <img data-ur-carousel-component="item" src='../images/sample4.png' alt="4" />
-          <img data-ur-carousel-component="item" src='../images/sample5.png' alt="5" />
-          <img data-ur-carousel-component="item" src='../images/sample6.png' alt="6" />
-          <img data-ur-carousel-component="item" src='../images/sample7.png' alt="7" />
-          <img data-ur-carousel-component="item" src='../images/sample8.png' alt="8" />
+          <span data-ur-carousel-component="item"> <img src='../images/sample1.png' alt="1" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample2.png' alt="2" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample3.png' alt="3" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample4.png' alt="4" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample5.png' alt="5" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample6.png' alt="6" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample7.png' alt="7" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample8.png' alt="8" /> </span>
         </div>
       </div>
     </div>
@@ -392,14 +392,14 @@
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
         <div data-ur-carousel-component="scroll_container">
-          <img data-ur-carousel-component="item" src='../images/sample1.png' alt="1" />
-          <img data-ur-carousel-component="item" src='../images/sample2.png' alt="2" />
-          <img data-ur-carousel-component="item" src='../images/sample3.png' alt="3" />
-          <img data-ur-carousel-component="item" src='../images/sample4.png' alt="4" />
-          <img data-ur-carousel-component="item" src='../images/sample5.png' alt="5" />
-          <img data-ur-carousel-component="item" src='../images/sample6.png' alt="6" />
-          <img data-ur-carousel-component="item" src='../images/sample7.png' alt="7" />
-          <img data-ur-carousel-component="item" src='../images/sample8.png' alt="8" />
+          <span data-ur-carousel-component="item"> <img src='../images/sample1.png' alt="1" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample2.png' alt="2" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample3.png' alt="3" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample4.png' alt="4" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample5.png' alt="5" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample6.png' alt="6" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample7.png' alt="7" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample8.png' alt="8" /> </span>
         </div>
       </div>
     </div>
@@ -427,14 +427,14 @@
           Next
         </div>
         <div data-ur-carousel-component="scroll_container">
-          <img data-ur-carousel-component="item" src='../images/sample1.png' alt="1" />
-          <img data-ur-carousel-component="item" src='../images/sample2.png' alt="2" />
-          <img data-ur-carousel-component="item" src='../images/sample3.png' alt="3" />
-          <img data-ur-carousel-component="item" src='../images/sample4.png' alt="4" />
-          <img data-ur-carousel-component="item" src='../images/sample5.png' alt="5" />
-          <img data-ur-carousel-component="item" src='../images/sample6.png' alt="6" />
-          <img data-ur-carousel-component="item" src='../images/sample7.png' alt="7" />
-          <img data-ur-carousel-component="item" src='../images/sample8.png' alt="8" />
+          <span data-ur-carousel-component="item"> <img src='../images/sample1.png' alt="1" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample2.png' alt="2" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample3.png' alt="3" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample4.png' alt="4" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample5.png' alt="5" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample6.png' alt="6" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample7.png' alt="7" /> </span>
+          <span data-ur-carousel-component="item"> <img src='../images/sample8.png' alt="8" /> </span>
         </div>
       </div>
     </div>
