--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@ home_selected: selected
             Next
           </div>
           <div data-ur-carousel-component="scroll_container">
-            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample1.png' alt="1" />
-            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample2.png' alt="2" />
-            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample3.png' alt="3" />
-            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample4.png' alt="4" />
-            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample5.png' alt="5" />
-            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample6.png' alt="6" />
-            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample7.png' alt="7" />
-            <img data-ur-carousel-component="item" src='{{site.url}}../images/sample8.png' alt="8" />
+            <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample1.png' alt="1" /> </span>
+            <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample2.png' alt="2" /> </span>
+            <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample3.png' alt="3" /> </span>
+            <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample4.png' alt="4" /> </span>
+            <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample5.png' alt="5" /> </span>
+            <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample6.png' alt="6" /> </span>
+            <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample7.png' alt="7" /> </span>
+            <span data-ur-carousel-component="item"> <img src='{{site.url}}../images/sample8.png' alt="8" /> </span>
           </div>
         </div>
       </div>
@@ -83,14 +83,14 @@ home_selected: selected
   <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
   <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
   <div data-ur-carousel-component='scroll_container'>
-    <img data-ur-carousel-component='item' src='images/sample1.png' alt="1" />
-    <img data-ur-carousel-component='item' src='images/sample2.png' alt="2" />
-    <img data-ur-carousel-component='item' src='images/sample3.png' alt="3" />
-    <img data-ur-carousel-component='item' src='images/sample4.png' alt="4" />
-    <img data-ur-carousel-component='item' src='images/sample5.png' alt="5" />
-    <img data-ur-carousel-component='item' src='images/sample6.png' alt="6" />
-    <img data-ur-carousel-component='item' src='images/sample7.png' alt="7" />
-    <img data-ur-carousel-component='item' src='images/sample8.png' alt="8" />
+    <span data-ur-carousel-component='item'> <img src='images/sample1.png' alt="1" /> </span>
+    <span data-ur-carousel-component='item'> <img src='images/sample2.png' alt="2" /> </span>
+    <span data-ur-carousel-component='item'> <img src='images/sample3.png' alt="3" /> </span>
+    <span data-ur-carousel-component='item'> <img src='images/sample4.png' alt="4" /> </span>
+    <span data-ur-carousel-component='item'> <img src='images/sample5.png' alt="5" /> </span>
+    <span data-ur-carousel-component='item'> <img src='images/sample6.png' alt="6" /> </span>
+    <span data-ur-carousel-component='item'> <img src='images/sample7.png' alt="7" /> </span>
+    <span data-ur-carousel-component='item'> <img src='images/sample8.png' alt="8" /> </span>
   </div>
 </div>
 {% endhighlight %}
