--- a/site/index.html
+++ b/site/index.html
@@ -91,14 +91,14 @@
             Next
           </div>
           <div data-ur-carousel-component="scroll_container">
-            <img data-ur-carousel-component="item" src='../images/sample1.png' alt="1" />
-            <img data-ur-carousel-component="item" src='../images/sample2.png' alt="2" />
-            <img data-ur-carousel-component="item" src='../images/sample3.png' alt="3" />
-            <img data-ur-carousel-component="item" src='../images/sample4.png' alt="4" />
-            <img data-ur-carousel-component="item" src='../images/sample5.png' alt="5" />
-            <img data-ur-carousel-component="item" src='../images/sample6.png' alt="6" />
-            <img data-ur-carousel-component="item" src='../images/sample7.png' alt="7" />
-            <img data-ur-carousel-component="item" src='../images/sample8.png' alt="8" />
+            <span data-ur-carousel-component="item"> <img src='../images/sample1.png' alt="1" /> </span>
+            <span data-ur-carousel-component="item"> <img src='../images/sample2.png' alt="2" /> </span>
+            <span data-ur-carousel-component="item"> <img src='../images/sample3.png' alt="3" /> </span>
+            <span data-ur-carousel-component="item"> <img src='../images/sample4.png' alt="4" /> </span>
+            <span data-ur-carousel-component="item"> <img src='../images/sample5.png' alt="5" /> </span>
+            <span data-ur-carousel-component="item"> <img src='../images/sample6.png' alt="6" /> </span>
+            <span data-ur-carousel-component="item"> <img src='../images/sample7.png' alt="7" /> </span>
+            <span data-ur-carousel-component="item"> <img src='../images/sample8.png' alt="8" /> </span>
           </div>
         </div>
       </div>
@@ -109,14 +109,14 @@
   <span class="nt">&lt;div</span> <span class="na">data-ur-carousel-component=</span><span class="s">&quot;button&quot;</span> <span class="na">data-ur-carousel-button-type=</span><span class="s">&quot;prev&quot;</span><span class="nt">&gt;</span>Prev<span class="nt">&lt;/div&gt;</span>
   <span class="nt">&lt;div</span> <span class="na">data-ur-carousel-component=</span><span class="s">&quot;button&quot;</span> <span class="na">data-ur-carousel-button-type=</span><span class="s">&quot;next&quot;</span><span class="nt">&gt;</span>Next<span class="nt">&lt;/div&gt;</span>
   <span class="nt">&lt;div</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;scroll_container&#39;</span><span class="nt">&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;images/sample1.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;1&quot;</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;images/sample2.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;2&quot;</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;images/sample3.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;3&quot;</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;images/sample4.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;4&quot;</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;images/sample5.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;5&quot;</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;images/sample6.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;6&quot;</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;images/sample7.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;7&quot;</span> <span class="nt">/&gt;</span>
-    <span class="nt">&lt;img</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span> <span class="na">src=</span><span class="s">&#39;images/sample8.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;8&quot;</span> <span class="nt">/&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;images/sample1.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;1&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;images/sample2.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;2&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;images/sample3.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;3&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;images/sample4.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;4&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;images/sample5.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;5&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;images/sample6.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;6&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;images/sample7.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;7&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
+    <span class="nt">&lt;span</span> <span class="na">data-ur-carousel-component=</span><span class="s">&#39;item&#39;</span><span class="nt">&gt;</span> <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">&#39;images/sample8.png&#39;</span> <span class="na">alt=</span><span class="s">&quot;8&quot;</span> <span class="nt">/&gt;</span> <span class="nt">&lt;/span&gt;</span>
   <span class="nt">&lt;/div&gt;</span>
 <span class="nt">&lt;/div&gt;</span>
 </code></pre></div>
