The carousel on the homepage should be infinite

--- a/site/index.html
+++ b/site/index.html
@@ -82,7 +82,7 @@
 
       <div id="carousel_interaction" class="example_interaction"  data-ur-tabs-component="content" data-ur-tab-id="carousel_interaction" data-ur-state="enabled">
 
-        <div data-ur-set="carousel" data-ur-id="MyFirstCarousel" data-ur-clones=5 data-ur-infinite="disabled">
+        <div data-ur-set="carousel" data-ur-id="MyFirstCarousel" data-ur-clones="5">
           <span data-ur-carousel-component="count"> -- count -- </span>
           <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev" >
             Prev
