Adding a description for the data-ur-clones attribute on carousels

--- a/interactions/carousel.html
+++ b/interactions/carousel.html
@@ -26,6 +26,7 @@ advanced_tab:
         - "optional: <code>data-ur-autoscroll</code>: enabled/<em>disabled</em> (automatically scroll with interval)</li>"
         - "optional: <code>data-ur-autoscroll-delay</code>: integer (autoscroll delay in milliseconds, default: <em>5000</em>)</li>"
         - "optional: <code>data-ur-autoscroll-dir</code>: <em>next</em>/prev (specify autoscroll direction)</li>"
+        - "optional: <code>data-ur-clones</code>: integer (in infinite carousels, the number of cloned items included before first and after last item, default: <em>1</em>)</li>"
         - "optional: <code>data-ur-android3d</code>: enabled/disabled (specify translate3d use on Android 1.6-2.3)</li>"
         - "optional: <code>data-ur-fill (&beta;)</code>: integer (force n carousel items to fit in container width)</li>"
         - "optional: <code>data-ur-center (&beta;)</code>: enabled/<em>disabled</em> (horizontally center current item)</li>"
