--- a/interactions/carousel.html
+++ b/interactions/carousel.html
@@ -162,15 +162,16 @@ advanced_tab:
     
     <div class="test">
       <a id="infinite"></a>
-      <h3>Infinite Scrolling</h3>
+      <h3>Non-Infinite Scrolling</h3>
 
       <p>
-        Here we have a carousel that loops from front to back. (Default state for carousel.) The carousel also has indicator dots showing what item is currently selected. The indicator dots have a data-ur-state of "inactive" until the corresponding item is selected, when the data-ur-state changes to "active" – you can use this for styling the dots.
+        Here we have a carousel that doesn't loop from front to back. (Default state is an "infinite" carousel.) The carousel also has indicator dots showing what item is currently selected. The indicator dots have a data-ur-state of "inactive" until the corresponding item is selected, when the data-ur-state changes to "active" – you can use this for styling the dots.
       </p>
       <ul>
+        <li><span class="inline_code">data-ur-infinite="disabled"</span> - apply this to the set</li>
         <li><span class="inline_code">data-ur-carousel-component="dots"</span> - should be within the set</li>
       </ul>
-      <div data-ur-set="carousel" data-ur-infinite="enabled" data-ur-clones="2">
+      <div data-ur-set="carousel" data-ur-infinite="disabled" data-ur-clones="2">
         <div data-ur-carousel-component="dots"></div>
         <span data-ur-carousel-component="count"> -- count -- </span>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
