fix geocode type and use default carousel on home

--- a/interactions/geocode.html
+++ b/interactions/geocode.html
@@ -43,7 +43,7 @@ advanced_tab:
       - "multiple?: false"
       - "state: N/A"
       - can use a select tag or a text-input field
-    g-zip:
+    rg-zip:
       - "multiple?: false"
       - "state: N/A"
     rg-country:
