--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ home_selected: selected
 
       <div id="carousel_interaction" class="example_interaction"  data-ur-tabs-component="content" data-ur-tab-id="carousel_interaction" data-ur-state="enabled">
 
-        <div data-ur-set="carousel" data-ur-id="MyFirstCarousel" data-ur-clones="5">
+        <div data-ur-set="carousel" data-ur-id="MyFirstCarousel">
           <span data-ur-carousel-component="count"> -- count -- </span>
           <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev" >
             Prev
