--- a/interactions/carousel.html
+++ b/interactions/carousel.html
@@ -71,7 +71,7 @@ advanced_tab:
 
         <div id="carousel_interaction" class="example_interaction example"  data-ur-tabs-component="content" data-ur-tab-id="interaction" data-ur-state="enabled">
 
-          <div data-ur-set="carousel" data-ur-id="MyFirstCarousel" data-ur-clones="5">
+          <div data-ur-set="carousel" data-ur-id="MyFirstCarousel">
             <span data-ur-carousel-component="count"> -- count -- </span>
             <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev" >
               Prev
@@ -140,7 +140,7 @@ advanced_tab:
       <ul>
         <li><span class="inline_code">data-ur-vertical-scroll="disabled"</span> - apply this to the set</li>
       </ul>
-      <div data-ur-set="carousel" data-ur-vertical-scroll="disabled" data-ur-clones="5">
+      <div data-ur-set="carousel" data-ur-vertical-scroll="disabled">
         <span data-ur-carousel-component="count"> -- count -- </span>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
@@ -169,7 +169,7 @@ advanced_tab:
       <ul>
         <li><span class="inline_code">data-ur-carousel-component="dots"</span> - should be within the set</li>
       </ul>
-      <div data-ur-set="carousel" data-ur-infinite="enabled" data-ur-clones="2">
+      <div data-ur-set="carousel" data-ur-infinite="enabled">
         <div data-ur-carousel-component="dots"></div>
         <span data-ur-carousel-component="count"> -- count -- </span>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</div>
@@ -200,7 +200,7 @@ advanced_tab:
         <li><span class="inline_code">data-ur-autoscroll="enabled"</span> - apply this to the set</li>
         <li><span class="inline_code">data-ur-autoscroll-delay="5000"</span> - apply this to the set (value is in milliseconds)</li>
       </ul>
-      <div data-ur-set="carousel" data-ur-infinite="enabled" data-ur-clones="5" data-ur-autoscroll="enabled">
+      <div data-ur-set="carousel" data-ur-infinite="enabled" data-ur-autoscroll="enabled">
         
         <span data-ur-carousel-component="count"> -- count -- </span>
         <div data-ur-carousel-component="button" data-ur-carousel-button-type="prev" >
